[package]
name = "test-rust-reports-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^1.2", features = ["v4"] }
dotenv = "0.15.0"
futures = "0.3"
serde = { version = "^1", features = ["derive"] }
env_logger = "^0.8"
log = "^0.4"
sqlite = "0.28.1"
strum_macros = "0.24.3"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
