[package]
name = "test-rust-reports-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^1.2", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "^0.8"
sqlite = "0.30.1"
strum = "0.24.1"
strum_macros = "0.24.3"
